add:crud operation

--- a/addreeBookHome.html
+++ b/addreeBookHome.html
@@ -24,8 +24,8 @@
         
     <div class="login">
         <!-- UC-2 -->
-    <h1>PERSON ADDRESS FORM</h1>
-        <form action="#" onsubmit="save()" onreset="resetForm()">
+    <h1>PERSON ADDRESS FORM      <a href="newHome.html"> <img class="cross"   src="images/cross.png" alt=""></a></h1>
+        <form action="#" onsubmit="save(event)" onreset="resetForm()">
             <div class="row-content">
                 <fieldset class="fieldset">
                     <legend>Full name</legend>
